--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,18 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "ethers": "^6.6.4",
+    "moment": "2.29.3",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-icons": "^4.10.1",
+    "react-identicons": "^1.2.5",
+    "react-moment": "^1.1.3",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
